# icu4c-bazel

./: .bazelrc  BUILD  MODULE.bazel  icu-external.BUILD.bazel
