"Import of icu4c into bazel"
module(name = "icu4c", version = "76.1")

bazel_dep(name = "rules_cc", version = "0.1.0")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
git_repository(
    name = "icu-external",
    remote = "https://github.com/unicode-org/icu.git",
    tag = "release-76-1",
    patches = ["//:remove_build_files.patch"],
    build_file = "//:icu-external.BUILD.bazel",
)
