cc_library(
    name = "stubdata",
    srcs = glob([
        "icu4c/source/stubdata/*.cpp",
        "icu4c/source/stubdata/*.h",
    ]),
    defines = [
        "U_COMMON_IMPLEMENTATION",
        "U_STATIC_IMPLEMENTATION",
    ],
    linkstatic = True,
    deps = [":icuuc_headers"],
)

cc_library(
    name = "icuuc_headers",
    hdrs = glob(["icu4c/source/common/unicode/*.h"]),
    includes = ["icu4c/source/common"],
)

cc_library(
    name = "icuuc",
    srcs = glob([
        "icu4c/source/common/*.cpp",
        "icu4c/source/common/*.h",
    ]),
    defines = [
        "U_COMMON_IMPLEMENTATION",
        "U_STATIC_IMPLEMENTATION",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        ":icuuc_headers",
        ":stubdata",
    ],
)

cc_library(
    name = "icui18n",
    srcs = glob([
        "icu4c/source/i18n/*.cpp",
        "icu4c/source/i18n/*.h",
    ]),
    hdrs = glob(["icu4c/source/i18n/unicode/*.h"]),
    defines = [
        "U_I18N_IMPLEMENTATION",
        "U_STATIC_IMPLEMENTATION",
    ],
    includes = ["icu4c/source/i18n"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [":icuuc"],
)

cc_library(
    name = "icuio",
    srcs = glob([
        "icu4c/source/io/*.cpp",
        "icu4c/source/io/*.h",
    ]),
    hdrs = glob(["icu4c/source/io/unicode/*.h"]),
    defines = [
        "U_IO_IMPLEMENTATION",
        "U_STATIC_IMPLEMENTATION",
    ],
    includes = ["icu4c/source/io"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        ":icui18n",
        ":icuuc",
    ],
)
